classDiagram
%% ============ ENTITET ============
class Bus {
    +BusId: string                  
    +Model: BusModel                
    +Rute: RuteNavn                 
    +BatteriKapacitetKWh: double   
    +BatteriNiveauProcent: double   
    +ForbrugKWhPrKm: double         
    +Status: BusStatus             
    +SidstOpdateret: DateTime      
    +BeregnResterendeDriftTid(hastighedKmh: double): TimeSpan   
}

%% ============ ENUMERATIONER ============
class BusModel {
    <<enumeration>>
    MBeCitaro
    YutongE12
    BYDK9
    Volvo7900E
}

class RuteNavn {
    <<enumeration>>
    R1A
    R10
    R11
    R13
    R132
    R133
    R137
    R139
}

class BusStatus {
    <<enumeration>>
    PåRute
    Afløser
    Returnerer
    Oplader
    Garage
}

%% ============ RELATIONER ============
Bus "1" --> "1" BusModel
Bus "1" --> "1..8" RuteNavn
Bus "1" --> "1..5" BusStatus
